[package]
name = "rust_sqlite_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
once_cell = "1.18.0"
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["rand", "v4"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
